--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,9 +1,11 @@
 html,
 body {
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
     color: #fefeff;
     text-shadow: rgb(0, 0, 0, 1) 0px 0px 15px;
     scroll-behavior: smooth;
+    scrollbar-width: none;
     cursor: none;
     margin: 0;
     padding-top: env(safe-area-inset-top);
